# bullet_hub

./: .gitignore  README.MD
client/: Cargo.toml
client/src/: bh_server.rs  lib.rs
client/src/module_bindings/: dynamic_entity.rs  global.rs  mod.rs  stdb_complex.rs  stdb_quaternion.rs  stdb_vector_2.rs  tick_physics_reducer.rs
godot/: export_presets.cfg  project.godot  rust.gdextension
godot/assets/: icon.svg.import
godot/assets/textures/prototype/Dark/: texture_05.png.import
godot/src/main/scenes/: world.tscn
server/: Cargo.toml
server/spacetime_rapier2d/: Cargo.toml
server/spacetime_rapier2d/src/: lib.rs  state.rs  tables.rs  types.rs
server/spacetime_rapier2d/src/types/: stdb_complex.rs  stdb_vector2.rs
server/spacetime_rapier3d/: Cargo.toml
server/spacetime_rapier3d/src/: state.rs  tables.rs  types.rs  utils.rs
server/spacetime_rapier3d/src/types/: stdb_quaternion.rs  stdb_vector3.rs
server/src/: lib.rs
