[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[dependencies]
spacetimedb-sdk = "0.8"
hex = "0.4"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
tokio = { version = "1.35.1", features = ["full"] }
