workspace = { members = [ "spacetime_rapier2d","spacetime_rapier3d"] }

[package]
name = "bullethub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = "0.8.0"
log = "0.4"
spacetime_rapier2d = { path = "./spacetime_rapier2d" }
rapier2d = { version = "*", features = [ "enhanced-determinism", "wasm-bindgen", "serde-serialize" ] }
