[package]
name = "spacetime_rapier2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spacetimedb = "0.8.0"
log = "0.4"
rapier2d = { version = "*", features = [ "enhanced-determinism", "wasm-bindgen", "serde-serialize" ] }
serde = { version = "1.0.193", features = ["derive"] } 
bincode = "1.3.3"
